@@ -14,6 +14,8 @@ Version 1.3.7+svn:
      a game to avoid ambiguity in case of multiple games with the same name
  * WML engine:
    * now tag [filter_adjacent] is supported in the Standard Unit Filter
+   * remove the unused [neighbour_unit_filter] animation filter, now that SUF
+   does it for us (and better)
  * graphics:
    * new graphics for the highwayman
  * miscellaneous and bug fixes
